--- a/Website/index.html
+++ b/Website/index.html
@@ -1,67 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Bootstrap 101 Template</title>
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Bootstrap 101 Template</title>
 
-		<!-- Bootstrap -->
-		<link href="css/bootstrap.min.css" rel="stylesheet">
-		<link href='http://fonts.googleapis.com/css?family=Wellfleet' rel='stylesheet' type='text/css'>
-		<link href='http://fonts.googleapis.com/css?family=Wellfleet' rel='stylesheet' type='text/css'>
-		<link href='http://fonts.googleapis.com/css?family=Arvo:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
-		<link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
-		<link href='http://fonts.googleapis.com/css?family=Goudy+Bookletter+1911' rel='stylesheet' type='text/css'>
-		<link rel="stylesheet" type="text/css" href="css/style.css">
+	<!-- Bootstrap -->
+	<link href="css/bootstrap.min.css" rel="stylesheet">
+	<link href='http://fonts.googleapis.com/css?family=Wellfleet' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Wellfleet' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Arvo:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Goudy+Bookletter+1911' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 
 
 
-		<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-		<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+	<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 		<!--[if lt IE 9]>
 			<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
 			<script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-		<![endif]-->
-	</head>
-	<body onload="init()" style="background: black;">
-		<h1>Hello, world!</h1>
-		<div class="cld1"></div>
-		<div class="dude" style="margin: 0 auto; width: 400px; background: white;">
-		<p>
-			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus porta pharetra urna, auctor consectetur lorem pharetra in. Donec laoreet justo nunc, a aliquam risus aliquam semper. Praesent volutpat pretium congue. Suspendisse ut vehicula lectus. Phasellus vehicula risus tortor, et lobortis libero porta sit amet. Sed id convallis purus. Nulla facilisi. Nulla quis dapibus massa, a ornare nibh. Donec varius nulla nec erat ullamcorper, sed porta elit feugiat. Nulla facilisi. Integer eleifend, nisi at vulputate placerat, massa nisl congue dolor, sed aliquet tortor orci sed sapien. Cras ullamcorper, nunc sollicitudin rhoncus dignissim, risus est tincidunt lorem, in fermentum tellus augue convallis augue. Vestibulum ut dictum ligula, viverra congue risus. Etiam vel massa euismod, euismod mi vitae, porta lectus. Sed pharetra nibh a nibh congue blandit.
+			<![endif]-->
+		</head>
+		<body onload="init()" style="background: black;">
+			<h1>Hello, world!</h1>
+			<img src="images/nexus5.png" class="cld1"></img>
+			<div></div>
+			<div></div>
+			<div></div>
+			<div class="dude" style="margin: 0 auto; width: 20%; background: white;">
+				<p>
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus porta pharetra urna, auctor consectetur lorem pharetra in. Donec laoreet justo nunc, a aliquam risus aliquam semper. Praesent volutpat pretium congue. Suspendisse ut vehicula lectus. Phasellus vehicula risus tortor, et lobortis libero porta sit amet. Sed id convallis purus. Nulla facilisi. Nulla quis dapibus massa, a ornare nibh. Donec varius nulla nec erat ullamcorper, sed porta elit feugiat. Nulla facilisi. Integer eleifend, nisi at vulputate placerat, massa nisl congue dolor, sed aliquet tortor orci sed sapien. Cras ullamcorper, nunc sollicitudin rhoncus dignissim, risus est tincidunt lorem, in fermentum tellus augue convallis augue. Vestibulum ut dictum ligula, viverra congue risus. Etiam vel massa euismod, euismod mi vitae, porta lectus. Sed pharetra nibh a nibh congue blandit.
 
-Suspendisse in mauris enim. Aliquam vel facilisis velit, a ullamcorper augue. Nam rutrum, odio vel lobortis tempus, risus orci congue velit, ullamcorper placerat neque diam a nisi. Pellentesque placerat pretium justo non aliquet. Donec hendrerit massa metus, non vulputate mauris pretium id. Mauris vitae vulputate metus, lacinia vestibulum massa. Morbi vitae pretium tortor. Praesent feugiat pulvinar auctor. Praesent tellus urna, pretium pharetra rhoncus sit amet, gravida at massa. Fusce congue sem ipsum, quis dignissim augue scelerisque at. Nulla eu risus tempus, sodales nibh et, rhoncus enim. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+					Suspendisse in mauris enim. Aliquam vel facilisis velit, a ullamcorper augue. Nam rutrum, odio vel lobortis tempus, risus orci congue velit, ullamcorper placerat neque diam a nisi. Pellentesque placerat pretium justo non aliquet. Donec hendrerit massa metus, non vulputate mauris pretium id. Mauris vitae vulputate metus, lacinia vestibulum massa. Morbi vitae pretium tortor. Praesent feugiat pulvinar auctor. Praesent tellus urna, pretium pharetra rhoncus sit amet, gravida at massa. Fusce congue sem ipsum, quis dignissim augue scelerisque at. Nulla eu risus tempus, sodales nibh et, rhoncus enim. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 
-Praesent auctor cursus pretium. Mauris facilisis, ipsum et scelerisque condimentum, augue mauris tristique velit, sit amet sodales nisi massa et nisl. Suspendisse potenti. Vestibulum ut nunc ipsum. Morbi id risus tortor. Quisque rhoncus a metus vitae vulputate. Sed et eros id metus rhoncus placerat vel eget eros. Sed iaculis libero quis eros ultricies, ut commodo erat pretium. Fusce eget ligula vestibulum, posuere odio ac, hendrerit risus. Maecenas blandit purus vitae luctus sodales. Nunc nec est non sapien auctor interdum. Fusce porttitor placerat elit, a facilisis lectus vestibulum et. Integer facilisis lectus at auctor dignissim. Aenean ornare arcu sed enim scelerisque viverra.
+					Praesent auctor cursus pretium. Mauris facilisis, ipsum et scelerisque condimentum, augue mauris tristique velit, sit amet sodales nisi massa et nisl. Suspendisse potenti. Vestibulum ut nunc ipsum. Morbi id risus tortor. Quisque rhoncus a metus vitae vulputate. Sed et eros id metus rhoncus placerat vel eget eros. Sed iaculis libero quis eros ultricies, ut commodo erat pretium. Fusce eget ligula vestibulum, posuere odio ac, hendrerit risus. Maecenas blandit purus vitae luctus sodales. Nunc nec est non sapien auctor interdum. Fusce porttitor placerat elit, a facilisis lectus vestibulum et. Integer facilisis lectus at auctor dignissim. Aenean ornare arcu sed enim scelerisque viverra.
 
-Mauris aliquet consequat mi, nec gravida arcu posuere vel. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Etiam orci nunc, faucibus non dolor eu, porta pellentesque libero. Duis ullamcorper turpis sed elit feugiat, in vulputate massa lobortis. Phasellus a erat erat. Donec ac risus metus. Aenean tellus orci, feugiat non ligula et, porttitor ultricies lectus. Vestibulum cursus est eu augue rhoncus mollis. Vivamus aliquam malesuada dui nec faucibus.
+					Mauris aliquet consequat mi, nec gravida arcu posuere vel. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Etiam orci nunc, faucibus non dolor eu, porta pellentesque libero. Duis ullamcorper turpis sed elit feugiat, in vulputate massa lobortis. Phasellus a erat erat. Donec ac risus metus. Aenean tellus orci, feugiat non ligula et, porttitor ultricies lectus. Vestibulum cursus est eu augue rhoncus mollis. Vivamus aliquam malesuada dui nec faucibus.
 
-Fusce tincidunt eros mi, eget consequat dolor varius sit amet. Aliquam tincidunt justo venenatis augue dapibus congue. Integer quis libero a sapien viverra ultricies. Phasellus convallis gravida nisl, eget iaculis turpis feugiat sit amet. Maecenas adipiscing aliquam nibh, nec ultrices erat consequat sit amet. Suspendisse ac nisi sed magna pharetra auctor. Aenean id augue lorem. Phasellus nec rhoncus mi. Quisque ullamcorper orci id sapien semper, at vulputate dolor pulvinar.
+					Fusce tincidunt eros mi, eget consequat dolor varius sit amet. Aliquam tincidunt justo venenatis augue dapibus congue. Integer quis libero a sapien viverra ultricies. Phasellus convallis gravida nisl, eget iaculis turpis feugiat sit amet. Maecenas adipiscing aliquam nibh, nec ultrices erat consequat sit amet. Suspendisse ac nisi sed magna pharetra auctor. Aenean id augue lorem. Phasellus nec rhoncus mi. Quisque ullamcorper orci id sapien semper, at vulputate dolor pulvinar.
 
-Morbi tempor odio quis ullamcorper pellentesque. Nam metus urna, vestibulum sit amet augue ut, tincidunt lacinia augue. Suspendisse luctus consectetur vestibulum. Nullam rutrum metus ut metus lobortis, sit amet euismod nulla commodo. Vivamus a elementum lorem. Proin hendrerit orci ac ultricies interdum. Nullam et nulla quis elit hendrerit imperdiet. Vestibulum faucibus, augue vitae blandit ultrices, felis metus blandit nulla, ut ullamcorper lorem sapien a erat. Cras condimentum ut sem id feugiat. Pellentesque eget tellus vulputate, egestas dolor eget, cursus sem.
+					Morbi tempor odio quis ullamcorper pellentesque. Nam metus urna, vestibulum sit amet augue ut, tincidunt lacinia augue. Suspendisse luctus consectetur vestibulum. Nullam rutrum metus ut metus lobortis, sit amet euismod nulla commodo. Vivamus a elementum lorem. Proin hendrerit orci ac ultricies interdum. Nullam et nulla quis elit hendrerit imperdiet. Vestibulum faucibus, augue vitae blandit ultrices, felis metus blandit nulla, ut ullamcorper lorem sapien a erat. Cras condimentum ut sem id feugiat. Pellentesque eget tellus vulputate, egestas dolor eget, cursus sem.
 
-Fusce orci ipsum, auctor vel ultrices ut, elementum vel lacus. Curabitur vehicula tortor nec vestibulum aliquet. Nam vehicula consequat turpis vel sodales. Pellentesque eleifend ante ac sapien accumsan elementum. Quisque ut risus ac sem vulputate lacinia. Integer vitae rutrum diam. Nulla sed mauris sed magna elementum mattis faucibus eget tortor.
+					Fusce orci ipsum, auctor vel ultrices ut, elementum vel lacus. Curabitur vehicula tortor nec vestibulum aliquet. Nam vehicula consequat turpis vel sodales. Pellentesque eleifend ante ac sapien accumsan elementum. Quisque ut risus ac sem vulputate lacinia. Integer vitae rutrum diam. Nulla sed mauris sed magna elementum mattis faucibus eget tortor.
 
-Duis elementum odio vel leo congue aliquet ut in urna. In mollis dolor vel erat semper, sit amet auctor nisi imperdiet. Proin tristique sed nisi eu condimentum. Nulla fringilla adipiscing mauris. Pellentesque suscipit lectus eu arcu vulputate tincidunt. Suspendisse vehicula feugiat magna, vitae iaculis sapien suscipit eget. Suspendisse lorem lacus, ornare a gravida in, tempus sed nisi. Ut tincidunt mi eget massa cursus, id pharetra mi tristique. Donec eu mauris quis felis sagittis rutrum eu in velit. Morbi non purus placerat, pulvinar tellus eu, ultrices velit. Pellentesque vulputate ac augue at consectetur. Vivamus et consectetur dui. Phasellus eu pretium quam. Cras velit metus, tempus in luctus et, tempor sed augue.
+					Duis elementum odio vel leo congue aliquet ut in urna. In mollis dolor vel erat semper, sit amet auctor nisi imperdiet. Proin tristique sed nisi eu condimentum. Nulla fringilla adipiscing mauris. Pellentesque suscipit lectus eu arcu vulputate tincidunt. Suspendisse vehicula feugiat magna, vitae iaculis sapien suscipit eget. Suspendisse lorem lacus, ornare a gravida in, tempus sed nisi. Ut tincidunt mi eget massa cursus, id pharetra mi tristique. Donec eu mauris quis felis sagittis rutrum eu in velit. Morbi non purus placerat, pulvinar tellus eu, ultrices velit. Pellentesque vulputate ac augue at consectetur. Vivamus et consectetur dui. Phasellus eu pretium quam. Cras velit metus, tempus in luctus et, tempor sed augue.
 
-Cras convallis gravida purus. Curabitur dictum fermentum sapien, at rutrum nisl feugiat feugiat. Cras sapien tellus, volutpat nec interdum nec, aliquet interdum lectus. Sed cursus aliquam massa, ac accumsan lorem auctor pharetra. Nullam lobortis, nunc vel laoreet pharetra, erat odio venenatis neque, ac adipiscing ligula leo vel ligula. Aliquam bibendum lacus libero, non blandit nisl tempus et. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Suspendisse sodales ullamcorper erat, congue dapibus nunc rutrum condimentum. Sed vitae rhoncus felis. Quisque vulputate lorem vel erat pellentesque faucibus.
-		</p>
+					Cras convallis gravida purus. Curabitur dictum fermentum sapien, at rutrum nisl feugiat feugiat. Cras sapien tellus, volutpat nec interdum nec, aliquet interdum lectus. Sed cursus aliquam massa, ac accumsan lorem auctor pharetra. Nullam lobortis, nunc vel laoreet pharetra, erat odio venenatis neque, ac adipiscing ligula leo vel ligula. Aliquam bibendum lacus libero, non blandit nisl tempus et. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Suspendisse sodales ullamcorper erat, congue dapibus nunc rutrum condimentum. Sed vitae rhoncus felis. Quisque vulputate lorem vel erat pellentesque faucibus.
+				</p>
 
-			
-		</div>
+				
+			</div>
 
-		<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-		<!-- Include all compiled plugins (below), or include individual files as needed -->
-		<script src="js/bootstrap.min.js"></script>
-		<script src="js/jarallax2.2c.js"></script>
+			<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+			<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+			<!-- Include all compiled plugins (below), or include individual files as needed -->
+			<script src="js/bootstrap.min.js"></script>
+			<script src="js/jarallax2.2c.js"></script>
 
-		<script type="text/javascript">
-			init = function () {
-				var jarr = new Jarallax();
-				jarr.addAnimation('.cld1',[{progress:'0%', top: '50%'}, {progress: '100%', top: '0%'}]);
-			}
-		</script>
-	</body>
-</html>
+			<script type="text/javascript">
+				init = function () {
+					var jarr = new Jarallax();
+					jarr.addAnimation('.cld1',[{progress:'0%', top: '100%'}, {progress: '50%', top: '20%'}]);
+					jarr.addAnimation('.cld1',[{progress: '50%', left: '50%'}, {progress: '100%', left: '20%'}]);
+					jarr.addAnimation('.cld1',[{progress:'80%', opacity: '1'},{progress: '90%', opacity: '1'}, {progress: '100%', opacity: '0'}]);
+				}
+			</script>
+		</body>
+		</html>
